--- a/index.html
+++ b/index.html
@@ -1,171 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<title>Family Calendar Dashboard</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-html, body {
-    margin: 0;
-    width: 100%;
-    height: 100%;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-    overflow: hidden;
-}
-body {
-    background:
-        linear-gradient(rgba(13,17,23,0.65), rgba(13,17,23,0.65)),
-        url("https://images.unsplash.com/photo-1500530855697-b586d89ba3ee");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    color: #e6edf3;
-}
-.top-bar {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 110px;
-    display: grid;
-    grid-template-columns: 1fr auto 1fr;
-    align-items: center;
-    padding: 0 32px;
-    box-sizing: border-box;
-    background: rgba(13,17,23,0.55);
-    backdrop-filter: blur(10px);
-    border-bottom: 1px solid rgba(255,255,255,0.08);
-    z-index: 10;
-}
-.location {
-    font-size: 22px;
-    font-weight: 600;
-    opacity: 0.85;
-}
-.weather {
-    font-size: 22px;
-    font-weight: 600;
-    opacity: 0.95;
-    justify-self: center;
-}
-.clock {
-    text-align: right;
-}
-.time {
-    font-size: 48px;
-    font-weight: 700;
-    letter-spacing: 1px;
-}
-.date {
-    font-size: 18px;
-    opacity: 0.75;
-}
-#calendar-container {
-    position: absolute;
-    top: 110px;
-    left: 0;
-    width: 100%;
-    height: calc(100% - 110px);
-}
-iframe {
-    width: 100%;
-    height: 100%;
-    border: none;
-}
-#refresh-overlay {
-    position: absolute;
-    top: 110px;
-    left: 0;
-    width: 100%;
-    height: calc(100% - 110px);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: rgba(13,17,23,0.6);
-    color: #fff;
-    font-size: 36px;
-    font-weight: 700;
-    z-index: 20;
-    display: none;
-}
-</style>
-</head>
-<body>
-
-
-<div class="top-bar">
-    <div class="location">Prairieville, LA</div>
-    <div class="weather" id="weather">Loading weather…</div>
-    <div class="clock">
-        <div class="time" id="time">--:--</div>
-        <div class="date" id="date">---</div>
-    </div>
-</div>
-
-
-<div id="calendar-container">
-    <iframe id="calendar" src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FChicago&showPrint=0&mode=WEEK&showTabs=0&showCalendars=0&showTz=0&showDate=0&showNav=0&showTitle=0&src=ZmFtaWx5MDYxNTI5MjM0MzA1OTI5MTA2NzJAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&color=%23e4c441" scrolling="no"></iframe>
-    <div id="refresh-overlay">Refreshing...</div>
-</div>
-
-
-<script>
-function updateClock() {
-    const now = new Date();
-    document.getElementById("time").textContent = now.toLocaleTimeString("en-US", {
-        timeZone: "America/Chicago",
-        hour: "2-digit",
-        minute: "2-digit",
-        hour12: true
-    });
-    document.getElementById("date").textContent = now.toLocaleDateString("en-US", {
-        timeZone: "America/Chicago",
-        weekday: "long",
-        month: "long",
-        day: "numeric"
-    });
-}
-updateClock();
-setInterval(updateClock, 1000);
-
-
-const lat = 30.3697;
-const lon = -91.1273;
-function updateWeather() {
-    fetch(`https://api.open-meteo.com/v1/forecast?latitude=${lat}&longitude=${lon}&current_weather=true&temperature_unit=fahrenheit&windspeed_unit=mph&timezone=America/Chicago`)
-    .then(res => res.json())
-    .then(data => {
-        const w = data.current_weather;
-        document.getElementById("weather").textContent = ` ${Math.round(w.temperature)}°F`;
-    })
-    .catch(() => {
-        document.getElementById("weather").textContent = "Weather unavailable";
-    });
-}
-updateWeather();
-setInterval(updateWeather, 300000);
-
-
-function refreshCalendar() {
-    const overlay = document.getElementById("refresh-overlay");
-    overlay.style.display = "flex";
-    const cal = document.getElementById("calendar");
-    // small delay to show message before reload
-    setTimeout(() => {
-        cal.src = cal.src;
-        setTimeout(() => {
-            overlay.style.display = "none";
-        }, 2000);
-    }, 500);
-}
-setInterval(refreshCalendar, 30000);
-</script>
-
-
-</body>
-</html>
-
-
-
-
-
+test
