--- a/index.html
+++ b/index.html
@@ -60,12 +60,18 @@ body {
     font-size: 18px;
     opacity: 0.75;
 }
-#calendar-container {
+#calendar-container, #shopping-container {
     position: absolute;
-    top: 110px;
     left: 0;
     width: 100%;
-    height: calc(100% - 110px);
+}
+#calendar-container {
+    top: 110px;
+    height: 50%;
+}
+#shopping-container {
+    top: calc(110px + 50%);
+    height: calc(50% - 110px);
 }
 iframe {
     width: 100%;
@@ -85,11 +91,24 @@ iframe {
     </div>
 </div>
 
+<!-- Calendar Panel -->
 <div id="calendar-container">
-    <iframe id="calendar" src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FChicago&showPrint=0&mode=WEEK&showTabs=0&showCalendars=0&showTz=0&showDate=0&showNav=0&showTitle=0&src=ZmFtaWx5MDYxNTI5MjM0MzA1OTI5MTA2NzJAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&color=%23e4c441" scrolling="no"></iframe>
+    <iframe id="calendar" 
+        src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FChicago&showPrint=0&mode=WEEK&showTabs=0&showCalendars=0&showTz=0&showDate=0&showNav=0&showTitle=0&src=ZmFtaWx5MDYxNTI5MjM0MzA1OTI5MTA2NzJAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&color=%23e4c441" 
+        scrolling="no">
+    </iframe>
+</div>
+
+<!-- Shopping List Panel -->
+<div id="shopping-container">
+    <iframe id="shopping-list" 
+        src="https://sharelist.app/list/H2GX2Y" 
+        scrolling="yes">
+    </iframe>
 </div>
 
 <script>
+// Clock
 function updateClock() {
     const now = new Date();
     document.getElementById("time").textContent = now.toLocaleTimeString("en-US", {
@@ -108,6 +127,7 @@ function updateClock() {
 updateClock();
 setInterval(updateClock, 1000);
 
+// Weather
 const lat = 30.3697;
 const lon = -91.1273;
 function updateWeather() {
@@ -124,11 +144,19 @@ function updateWeather() {
 updateWeather();
 setInterval(updateWeather, 300000);
 
+// Refresh Calendar iframe every 30 seconds
 function refreshCalendar() {
     const cal = document.getElementById("calendar");
     cal.src = cal.src;
 }
 setInterval(refreshCalendar, 30000);
+
+// Refresh Shopping iframe every 10 minutes
+function refreshShopping() {
+    const shop = document.getElementById("shopping-list");
+    shop.src = shop.src;
+}
+setInterval(refreshShopping, 600000);
 </script>
 
 </body>
